Bug 595142 - Animated gif/apng do not animate when used as background. r=bholley,joe a=blocking-final+